src/objects/bvd_connector__Batch_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>bvd_connector__Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Batch Size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Cron_Exp__c</fullName>
        <label>Cron Exp</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Day__c</fullName>
        <label>Day</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Frequency__c</fullName>
        <defaultValue>&apos;Daily&apos;</defaultValue>
        <label>Frequency</label>
        <length>63</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Job_ID__c</fullName>
        <description>Scheduled Job ID</description>
        <label>Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Object__c</fullName>
        <label>Object</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Start_Hour__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Start Hour</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Settings</label>
</CustomObject>